ZehCompilerJ/src/ZelParser.java
/* Generated By:JavaCC: Do not edit this line. ZelParser.java */
import java.io.*;
import java.util.*;
public class ZelParser implements ZelParserConstants {
/*** TODO ZEL
1. Mudar a questão de várias quebras de linhas ou ";" para ser reconhecido como um token somente
<EOL: ("\n",";")+> ao invés de ter na gramática e vários LOOKAHEAD(2)
2. Variáveis não-inicializadas;
3. Variáveis inicializadas mas não utilizadas;
4. Otimizador de Expressões
	- Expressões numéricas;
	- Expressões com strings;
	- Expressões com listas;
5. Estrutura de dados para comandos.
6. 
******/
  public static HashMap<String,Simbolo>tab =new HashMap<String,Simbolo>();
  public static ArrayDeque<Item> lixo=new ArrayDeque<Item>();
  public static LinkedList<Comando> cmdlst=new LinkedList<Comando>();
  public static int stackLen=0;
  public static FileInputStream fp;
  public static void main(String args []) throws ParseException
  {
      ZelParser analisador = null;
      System.out.print("ZEL Parser"+"\u005cn Arquivo: "+args[0]+"\u005cn");
      try {
                 fp=new FileInputStream(args[0]);
         analisador = new ZelParser(fp);
         cmdlst=inicio();
         System.out.println(tab);
         CodigoDestino cod=new CodigoDestino(args[0],cmdlst,tab );
         cod.geraCod();
      }
      catch(FileNotFoundException e) {
         System.out.println("Erro: arquivo n\u00e3o encontrado "+args[0]);
      }
      catch(TokenMgrError e) {
         System.out.println("Erro l\u00e9xico\u005cn" + e.getMessage());
         analisador.ReInit(fp);
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        analisador.ReInit(fp);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
      }
   }

  static final public LinkedList<Comando> inicio() throws ParseException, SemanticException {
                                                       LinkedList<Comando> coms;
    coms = corpo();
    jj_consume_token(0);
    {if (true) return coms;}
    throw new Error("Missing return statement in function");
  }

  static final public LinkedList<Comando> corpo() throws ParseException, SemanticException {
                                                       LinkedList<Comando> com=new LinkedList<Comando>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR_DCL:
      decl();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    cmds(com);
    {if (true) return com;}
    throw new Error("Missing return statement in function");
  }

  static final public void decl() throws ParseException, SemanticException {
    jj_consume_token(VAR_DCL);
    jj_consume_token(DOISP);
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TP_STRING:
      case TP_REAL:
      case TP_INT:
      case TP_CHAR:
      case TP_LIST:
        vartype();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      eoc();
    }
  }

  static final public void vartype() throws ParseException, SemanticException {
 ArrayDeque<Item> lst=new ArrayDeque<Item>();Token t;char tipo1,tipo2;Simbolo s;
    tipo1 = type();
    t = jj_consume_token(VAR);
     SemanticActions.testaVarDcl(tab,t);
     s=new Simbolo(t.image,tipo1);
     tab.put(t.image,s);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIB:
      jj_consume_token(ATRIB);
      tipo2 = literal(lst);
       SemanticActions.verificaLadoDireito(tipo1,tipo2,t);
       s.setInicializada();
       SemanticActions.addCmdAtrib(cmdlst,t.image,lst);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(VIRG);
      t = jj_consume_token(VAR);
       SemanticActions.testaVarDcl(tab,t);
       s=new Simbolo(t.image,tipo1);
       tab.put(t.image,s);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIB:
        jj_consume_token(ATRIB);
        tipo2 = literal(lst);
         SemanticActions.verificaLadoDireito(tipo1,tipo2,t);
         s.setInicializada();
         SemanticActions.addCmdAtrib(cmdlst,t.image,lst);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
    }
  }

  static final public char type() throws ParseException {
             Token t;char s='_';boolean lista=false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TP_LIST:
      jj_consume_token(TP_LIST);
              lista=true;
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TP_INT:
      jj_consume_token(TP_INT);
             s='i';
      break;
    case TP_CHAR:
      jj_consume_token(TP_CHAR);
              s='c';
      break;
    case TP_REAL:
      jj_consume_token(TP_REAL);
             s='r';
      break;
    case TP_STRING:
      jj_consume_token(TP_STRING);
               s='s';
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    if(lista)
      s=Character.toUpperCase(s);
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public void eoc() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EOL:
      jj_consume_token(EOL);
      break;
    case PNTVIRG:
      jj_consume_token(PNTVIRG);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void cmds(LinkedList<Comando> coms) throws ParseException, SemanticException {
                                                               LinkedList<Comando> coms1 = new LinkedList<Comando>();Comando com=new Comando();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PNTVIRG:
      case IF:
      case FOREACH:
      case WHILE:
      case READ:
      case PRINT:
      case VAR:
      case EOL:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case FOREACH:
      case WHILE:
      case READ:
      case PRINT:
      case VAR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          com = ifcmd(coms1);
          break;
        case WHILE:
          whilecmd(coms1);
          break;
        case FOREACH:
          foreach(coms1);
          break;
        case VAR:
          atrib(coms);
          break;
        case READ:
          entrada(coms1);
          break;
        case PRINT:
          saida(coms1);
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      eoc();
    }
    coms.add(com);
  }

//--------------------------------Atribuição e Expressões------------------------------------
  static final public Comando atrib(LinkedList<Comando> coms) throws ParseException, SemanticException {
 Comando com=new Comando();Token t;char tipo1='_',tipo2,tipo='_';ArrayDeque<Item> lst=new ArrayDeque<Item>();
LinkedList<Comando> atribs=new LinkedList<Comando>();
    label_4:
    while (true) {
      t = jj_consume_token(VAR);
      if(tipo1=='_')
      {

          tipo1=SemanticActions.testaVar(tab,t);
          tipo=tipo1;
        }
        else
        {
          tipo2=SemanticActions.testaVar(tab,t);
          tipo=tipo2;
          SemanticActions.verificaLadoDireito(tipo1,tipo2,t);
        }
        com=new Comando(t.image);
        atribs.add(com);
      jj_consume_token(ATRIB);
      if (jj_2_2(2)) {
        ;
      } else {
        break label_4;
      }
    }
    lst=new ArrayDeque<Item>();
    tipo2 = expr(tipo,lst);
    SemanticActions.verificaLadoDireito(tipo1,tipo2,t);
    for(Comando c : atribs)
    {
      c.setExpr(lst);
      coms.add(c);
    }
    {if (true) return com;}
    throw new Error("Missing return statement in function");
  }

  static final public char expr(char tipoAtrib,ArrayDeque<Item> lst) throws ParseException, SemanticException {
                                                                          char tipo;
    tipo = expr_aux(lst);
    System.out.println("SemOptmi = "+lst);
    SemanticActions.otimizaExp(lst,tipoAtrib);
    System.out.println("lstfinal = "+lst);
    stackLen=SemanticActions.tamanhoMaxPilha(lst,stackLen);

    //System.out.println(lst);
    {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public char expr_aux(ArrayDeque<Item> expr_lst) throws ParseException, SemanticException {
                                                                    Token t;char tipo='i';Item.op oper;
    tipo = expr_and(expr_lst);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
      case NOR:
      case XOR:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        t = jj_consume_token(OR);
             oper=Item.op.OR;
        break;
      case XOR:
        t = jj_consume_token(XOR);
               oper=Item.op.XOR;
        break;
      case NOR:
        t = jj_consume_token(NOR);
               oper=Item.op.NOR;
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      expr_and(expr_lst);
      tipo='i';
      SemanticActions.addItemLista(expr_lst,t.image,'o',oper);
    }
   {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public char expr_and(ArrayDeque<Item> expr_lst) throws ParseException, SemanticException {
                                                                    Token t;char tipo='i';Item.op oper;
    tipo = expr_bool(expr_lst);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case NAND:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        t = jj_consume_token(AND);
               oper=Item.op.AND;
        break;
      case NAND:
        t = jj_consume_token(NAND);
                      oper=Item.op.NAND;
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      expr_bool(expr_lst);
      tipo='i';
      SemanticActions.addItemLista(expr_lst,t.image,'o',oper);
    }
   {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public char expr_bool(ArrayDeque<Item> expr_lst) throws ParseException, SemanticException {
                                                                     char tipo1='n',tipo='_';Token t;
    tipo = expr_mod(expr_lst);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IN:
       ArrayDeque<Item> d=new ArrayDeque<Item>();
      t = jj_consume_token(IN);
      tipo1 = termo_concat(d);
        SemanticActions.verificaInList(tipo,tipo1,t);
        tipo='i';
        SemanticActions.addItemLista(expr_lst,d,tipo1);
        SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.IN);
      break;
    default:
      jj_la1[16] = jj_gen;
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OPER_REL:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_7;
        }
        t = jj_consume_token(OPER_REL);
        tipo1 = expr_mod(expr_lst);
        SemanticActions.verificaTipoRelacional(tipo,tipo1,t,t.image);
        tipo='i';
        if(t.image.equals(">"))
          SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.GT);
        if(t.image.equals(">="))
                  SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.GTEQ);
        if(t.image.equals("<"))
          SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.LS);
        if(t.image.equals("<="))
          SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.LSEQ);
        if(t.image.equals("=="))
          SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.EQ);
        if(t.image.equals("!="))
          SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.DIFF);
      }
    }
   {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public char expr_mod(ArrayDeque<Item> expr_lst) throws ParseException, SemanticException {
                                                                    char tipo1='n',tipo='_';Token t;
    tipo = expr_soma(expr_lst);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MOD:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_8;
      }
      t = jj_consume_token(MOD);
      tipo1 = expr_soma(expr_lst);
      SemanticActions.verificaTipoMod(tipo1,tipo,t);
      tipo=tipo1;
      SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.MOD);
    }
   {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public char expr_soma(ArrayDeque<Item> expr_lst) throws ParseException, SemanticException {
                                                                     char tipo1,tipo='n';Token t;
    tipo = expr_mult(expr_lst);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      tipo1 = expr_mult(expr_lst);
    SemanticActions.verificaTipoAritmetica(tipo1,tipo,t,t.image);
    //tipo=tipo1;
    if(t.image.equals("+"))
           SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.ADD);
        else
           SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.SUB);
    //SemanticActions.addItemLista(expr_lst,t.image,'o');

    }
   {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public char expr_mult(ArrayDeque<Item> expr_lst) throws ParseException, SemanticException {
                                                                     char tipo1,tipo='n';Token t;
    tipo = expr_pow(expr_lst);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULT:
      case DIV:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULT:
        t = jj_consume_token(MULT);
        break;
      case DIV:
        t = jj_consume_token(DIV);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      tipo1 = expr_pow(expr_lst);
      SemanticActions.verificaTipoAritmetica(tipo1,tipo,t,t.image);
      //tipo=tipo1;
      if(t.image.equals("*"))
           SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.MULT);
        else
           SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.DIV);
    }
   {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public char expr_pow(ArrayDeque<Item> expr_lst) throws ParseException, SemanticException {
                                                                    char tipo1,tipo;Token t;
    tipo = termo_not(expr_lst);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXP:
      t = jj_consume_token(EXP);
      tipo1 = expr_pow(expr_lst);
     SemanticActions.verificaTipoAritmetica(tipo1,tipo,t);
    SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.EXP);
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
   {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public char termo_not(ArrayDeque<Item> expr_lst) throws ParseException, SemanticException {
                                                                     char tipo1,tipo;Token t;int counter=0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      label_11:
      while (true) {
        t = jj_consume_token(NOT);
              counter++;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_11;
        }
      }
      termo_concat(expr_lst);
      tipo='i';
      if(counter%2==0)
      {
        SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.NOT);
        SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.NOT);
      }else
        SemanticActions.addItemLista(expr_lst,t.image,'o',Item.op.NOT);
      break;
    case ABRERET:
    case ABREPAR:
